better response format and add authorization on swagger ui
